# bevy-physics-weekend

./: .gitignore  Cargo.toml  README.md  build_wasm_simd.sh  diamond.json
assets/shaders/: checkerboard.frag  checkerboard.vert
pbd/: Cargo.toml
pbd/src/: lib.rs
physics/: Cargo.toml
physics/src/: body.rs  bounds.rs  broadphase.rs  contact.rs  gjk.rs  intersect.rs  lib.rs  manifold.rs  math_ext.rs  scene.rs  scene_shapes.rs  shape.rs
physics/src/constraints/: constraint_constant_velocity.rs  constraint_distance.rs  constraint_hinge_quat.rs  constraint_motor.rs  constraint_mover.rs  constraint_orientation.rs  constraint_penetration.rs  mod.rs
physics/src/math/: glam_ext.rs  lcp.rs  matn.rs  matrix.rs  mod.rs  vecn.rs  vector.rs
physics/src/shapes/: mod.rs  shape_box.rs  shape_convex.rs  shape_sphere.rs
src/: body.rs  bounds.rs  broadphase.rs  flycam.rs  intersect.rs  main.rs  physics_scene.rs  render.rs  shaders.rs  shape.rs  time_accumulator.rs
