[package]
name = "bevy-physics-weekend"
version = "0.1.0"
authors = ["Cameron Hart <cameron.hart@gmail.com>"]
edition = "2018"

[dependencies]
bevy = "0.5.0"
bevy_flycam = "0.5.1"
physics = { path = "physics" }

# patch bevy 0.5.0 to use latest version of glam
[patch.crates-io]
bevy = { git = "http://github.com/bitshifter/bevy", branch = "latest+glam-git" }
bevy_flycam = { git = "http://github.com/bitshifter/bevy_flycam" }
