[package]
name = "bevy-physics-weekend"
version = "0.1.0"
authors = ["Cameron Hart <cameron.hart@gmail.com>"]
edition = "2018"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
bevy_egui = "0.6"
bevy_flycam = "0.5.1"
bevy_webgl2 = { version = "0.5.0", optional = true }
console_error_panic_hook = "0.1"
physics = { path = "physics" }
winit = "0.24.0"
rand = "0.7"
getrandom = { version = "0.1", features = ["wasm-bindgen"] }

# patch bevy 0.5.0 to use latest version of glam
[patch.crates-io]
bevy = { git = "http://github.com/bitshifter/bevy", branch = "latest+glam-git" }
bevy_flycam = { git = "http://github.com/bitshifter/bevy_flycam" }

[profile.dev]
opt-level = 1
