[package]
name = "bevy-physics-weekend"
version = "0.1.0"
authors = ["Cameron Hart <cameron.hart@gmail.com>"]
edition = "2018"

[features]
default = [
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/bevy_gltf",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2",
  "winit/web-sys"
]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features=false }
bevy_egui = { git = "https://github.com/jakobhellermann/bevy_egui", branch = "bevy-main" }
#bevy_flycam = "0.5.1"
bevy_webgl2 = { git = "https://github.com/mrk-its/bevy_webgl2", optional = true }
# console_error_panic_hook = "0.1"
physics = { path = "physics" }
winit = "0.24.0"
rand = "0.7"

# patch bevy 0.5.0 to use latest version of glam
#[patch.crates-io]
#bevy = { git = "http://github.com/bitshifter/bevy", branch = "main+glam-git", default-features=false }
#bevy_flycam = { git = "http://github.com/bitshifter/bevy_flycam" }

[profile.dev]
opt-level = 1
